<resources>
    <string name="app_name">SaboresPeruanos_v1.2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_platos">Platos</string>
    <string name="title_pedido">Pedidos</string>
    <string name="title_pagos">Pagos</string>
    <string name="title_estado">Estado</string>
    <!--introduccion-->
    <string name="b_siguiente">Comienza a Disfrutar</string>
    <!--login-->
    <string name="login_ingresa">ingresar con una cuenta te da beneficios increibles, Tienes cuenta?, ingresa..!!</string>
    <string name="login_sin_cuenta">no necesito cuenta quiero comida de la buena..!!</string>
    <!--registro nuevo usuario-->
    <string name="r_usuario">genera un usuario unico, solo puede ingresar texto y numero, evite caracteres especiales.</string>
    <string name="r_nombre">Ingrese su nombre</string>
    <string name="r_apellido">Ingrese su apellido paterno</string>
    <string name="r_direccion">Ingrese su direccion</string>
    <string name="r_distrito">Ingrese su Distrito</string>
    <string name="r_sexo">Sexo</string>
    <string name="r_fecha_naci">Fecha de nacimiento</string>
    <string name="r_correo">Ingrese su correo elecronico</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">ActivityMenu</string>
</resources>
