<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pe.edu.upc.saboresperuanos_v12.activities.ActivityIntro">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_usuario"/>
        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ejemplo : wcastillo10" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_nombre"/>
        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ej: Williams"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_apellido"/>
        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ej: Castillo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_correo"/>
        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="Ej: wwilliamss@gmail.com"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_direccion"/>
        <EditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ej: calle xxxxxxx 578 xx"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_distrito"/>
        <EditText
            android:id="@+id/txtDistrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ej: Miraflores"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_fecha_naci"/>
        <EditText
            android:id="@+id/txtFechaNaci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ej: 07/01/1987"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registrar"
            android:id="@+id/btnRegistrar"/>
    </LinearLayout>
</ScrollView>

</LinearLayout>
